fix(theme-epub3j): text-spacing-trim and hanging-punctuation setting

--- a/packages/@vivliostyle/theme-epub3j/theme.css
+++ b/packages/@vivliostyle/theme-epub3j/theme.css
@@ -96,6 +96,13 @@ nav ul, nav ol {
   list-style: none;
 }
 
+/* 約物の処理
+---------------------------------------------------------------- */
+body {
+  text-spacing-trim: space-first; /* 折り返し行頭の約物を詰める */
+  hanging-punctuation: allow-end; /* 行末の句読点のぶら下げあり */
+}
+
 /* 簡易印刷スタイル（Vivliostyle用。通常のEPUBリーダーでは無視される）
 ---------------------------------------------------------------- */
 
